sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:7: error: not found: value int
      ecart = ecart/int(1.3)
                    ^AlgCombSort:17: error: not found: value echanges
  }while((ecart>1)||(!echanges))
                      ^